- `verify:360` stage-residue checks now execute across pass/partial/fail lanes (including dependency-missing, pair-failure, and fail-closed exception paths) and now scan the full temporary verify workspace so sibling `<out>.stage` roots are detected.
- `verify:360:harness` now asserts `stage_residue` step presence in verify reports across pass/partial/fail lanes.
- `verify_360_audit` now fails closed on any `.stage` residue under the verify out-root (`VERIFY360_AUDIT_STAGE_RESIDUE_PRESENT`).
- `verify:360:harness` now injects/removes an audit stage-residue probe to pin strict audit residue detection.
- Added Green Team runtime coverage for strict audit stage-residue behavior (`src/tools/greenteam/verify_360_audit_stage_residue.test.ts`).
- Root release packaging now enforces a no-stage-residue invariant in the release output folder, failing closed if `*.stage` files or `__stage_release*` directories are present before packaging starts or after sidecar finalize completes.
- Root release packaging now treats release sidecar docs as required artifacts (`RELEASE_NOTES.txt`, `RELEASE_ANNOUNCEMENT.txt`, `QUICKSTART.txt`, `RELEASE_CHECKLIST_ALPHA.md`, `RELEASE_HISTORY.md`, `CHANGELOG.md`) and fails closed instead of warning/skipping when any are missing.
- Root release packaging now performs best-effort cleanup of `__stage_release*` directories in a script-level `finally` block, reducing stale stage residue after interrupted or failed packaging runs.
- Root release packaging now validates the post-prune release bundle set and fails closed if stale or missing `weftend_*.zip` / `.sha256` artifacts remain after pruning old outputs.
- Ticket-pack contract coverage now enforces report-state extraction from `report_card_v0.json` and validates digest identity line format (`sha256:<64hex>`) in `ticket_summary.txt`.